--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -94,11 +94,11 @@ html.dark-mode {
      }
   }
 
-  .repo-img-light {
+  .repo a img.repo-img-light {
     display: none;
   }
   
-  .repo-img-dark {
+  .repo a img.repo-img-dark {
     display: block;
   }
 
